--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NeonMarket | Future Tech</title>
+  <style>
+    /* Instant CSS for static splash */
+    body { background: #050505; margin: 0; }
+    #initial-loading {
+      position: fixed; inset: 0; z-index: 9999;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      background: #050505; font-family: sans-serif;
+    }
+    .neon-circle {
+      width: 80px; height: 80px; border: 4px solid rgba(0, 242, 255, 0.1);
+      border-top: 4px solid #00f2ff; border-radius: 50%;
+      animation: spin 1s linear infinite; margin-bottom: 24px;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+    .neon-text {
+      color: #fff; font-weight: 900; letter-spacing: 0.2em; text-transform: uppercase;
+      font-style: italic; font-size: 24px;
+    }
+    .neon-cyan { color: #00f2ff; }
+  </style>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div id="initial-loading">
+      <div class="neon-circle"></div>
+      <div class="neon-text">NEON <span class="neon-cyan">MARKET</span></div>
+    </div>
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
